--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.11
   dio: ^5.1.1
   http: ^0.13.6
+  provider: ^6.0.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hexcolor: ^3.0.1
-  fluttertoast: ^8.2.1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
